--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
     "@types/react-map-gl": "^5.2.7",
+    "axios": "^0.20.0",
     "dayjs": "^1.8.36",
     "react": "^16.13.1",
     "react-day-picker": "^7.4.8",
