--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "pp-earthquack-map",
+  "homepage": "http://phara0hcom.github.io/earthquake-map",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -14,6 +15,9 @@
     "@types/react-map-gl": "^5.2.7",
     "axios": "^0.20.0",
     "dayjs": "^1.8.36",
+    "gh-pages": "^3.1.0",
+    "rc-slider": "^9.5.1",
+    "rc-switch": "^3.2.1",
     "react": "^16.13.1",
     "react-day-picker": "^7.4.8",
     "react-dom": "^16.13.1",
@@ -23,6 +27,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b master -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
