--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,11 +13,11 @@ jobs:
         uses: actions/checkout@v1
 
       - name: Build
-        run: |
-          npm install
-          npm run-script build
         env:
           REACT_APP_MAPBOX_KEY: ${{ secrets.MAPBOX_KEY }}
+        run: |
+          npm install
+          npm run build
 
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@releases/v3
